--- a/bingo.html
+++ b/bingo.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>РОЗЫГРЫШ УКРАИНЫ!!!!</title>
-	<script src="Jah.js"></script>
 </head>
 <body>
-	<textarea></textarea>
+	<textarea id="name2">b</textarea>
 	<input type="Button" name="Enter" value="РОЗЫГРЫШ">
+	<script src="Jah.js"></script>
 </body>
 </html>
